# outlabsAuth

./: .env.example  .gitignore  AGENTS.md  API_DESIGN.md  CHANGELOG.md  CLAUDE.md  COMPARISON_MATRIX.md  CONFIG_DETECTION_SUMMARY.md  CONSISTENCY_FIXES_2025-01-26.md  DESIGN_DECISIONS.md  DOCKER.md  DOCUMENTATION_UPDATES_2025-01-26.md  Dockerfile  ENTERPRISE_RBAC_BROWSER_TEST_RESULTS.md  ENTERPRISE_VALIDATION_PLAN.md  FINAL_PLATFORM_DOCUMENTATION.md  IMPLEMENTATION_FIXES_2025-01-26.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS_OAUTH.md  IMPLEMENTATION_SUMMARY_USER_ROLE_MEMBERSHIP.md  LICENSE  MAIN_REFACTOR_PLAN.md  MIGRATION_GUIDE.md  OBSERVABILITY_500_ERRORS_SUMMARY.md  OBSERVABILITY_COMPLETE_SUMMARY.md  OBSERVABILITY_MIGRATION_GUIDE.md  OBSERVABILITY_PATTERN_EXAMPLE.md  OBSERVABILITY_STACK.md  PERMISSIONS_MIGRATION.md  PERMISSIONS_PLAN.md  PHASE_3_COMPLETE.md  PHASE_5_PERFORMANCE_BENCHMARKS_COMPLETE.md  PHASE_5_REDIS_TESTS_STATUS.md  PHASE_5_TEST_PLAN.md  POSTGRESQL_MIGRATION.md  PROJECT_PROGRESS.md  PROJECT_STATUS.md  README.md  REAL_WORLD_TESTING.md  REDESIGN_VISION.md  (+29 more)
.claude/: settings.local.json
_archive/: PROJECT_STATUS.md.deprecated  README.md
_status_archive/: CORE_COMPLETION_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  SESSION_SUMMARY.md
admin-ui/: .env.example  Dockerfile  PROJECT_PLAN.md  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
api/: __init__.py  config.py  database.py  dependencies.py  main.py
auth-ui/: .env.example  LAYOUT_IMPLEMENTATION.md  MOCK_PHASE_SUMMARY.md  PHASE1_SUMMARY.md  PHASE_1_COMPLETE.md  PINIA_COLADA_MIGRATION.md  README.md  colada.options.ts  nuxt.config.ts  package.json
benchmarks/: bench_login.py  redis_roundtrips_bench.py
docs/: ADMIN_ACCESS_LEVELS.md  API_DESIGN.md  API_INTEGRATION_PATTERNS.md  API_KEY_SCOPE_AND_GRANT_POLICY_EPIC.md  API_PROXY_PATTERN_GUIDE.md  API_QUICK_START_GUIDE.md  API_SPECIFICATION.md  ARCHITECTURE.md  ARCHITECTURE_SECURITY_PERFORMANCE_AUDIT_2026-07-15.md  AUTH_EXTENSIONS.md  AUTH_UI.md  AUTH_UI_PARITY_GAPS.md  BEANIE_PATTERNS.md  CENTRALIZED_OAUTH_GUIDE.md  COMPARISON_MATRIX.md  CURRENT_IMPLEMENTATION_STATUS.md  CUSTOM_PERMISSIONS.md  DEPENDENCY_PATTERNS.md  DEPLOYMENT_GUIDE.md  DESIGN_DECISIONS.md  ENTERPRISE_ENTITY_TREE_AUTH_DEEP_DIVE.md  ENTERPRISE_TESTING_REQUIREMENTS.md  ENTITY_AUTHORIZATION_ROLE_ONLY.md  ENTITY_DELETION_AND_MEMBERSHIP_HISTORY.md  ENTITY_TYPE_FLEXIBILITY_CHANGES.md  ENTITY_TYPE_ROLE_SYSTEM_DESIGN.md  ERROR_HANDLING.md  EXTERNAL_API_INTEGRATION_GUIDE.md  FASTAPI_USERS_ANALYSIS.md  FASTAPI_USERS_COMPARISON.md  FRONTEND_MIGRATION_PLAN.md  FRONTEND_SPECIFICATION.md  HIERARCHICAL_PERMISSION_SYSTEM.md  HOST_INTEGRATION_QUERIES.md  HYBRID_AUTHORIZATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_GUIDE.md  LIBRARY_ARCHITECTURE.md  MIGRATION_GUIDE.md  MIGRATION_GUIDE_CONTEXT_AWARE_ROLES.md  (+41 more)
docs-library/: 00-Introduction.md  01-Getting-Started.md  01-Introduction.md  02-Quick-Start.md  02-Routers-and-Prefixes.md  03-Configuration.md  03-Installation.md  04-Basic-Concepts.md  04-OAuth-and-Social-Login.md  05-Sessions-and-Audit.md  06-Passwordless-and-Messaging.md  07-Choosing-a-Preset.md  08-Deployment.md  10-Architecture-Overview.md  11-Core-Components.md  12-Data-Models.md  13-Core-Authorization-Concepts.md  13-Service-Layer.md  14-FastAPI-Integration.md  20-Authentication-Overview.md  21-Email-Password-Auth.md  22-JWT-Tokens.md  23-API-Keys.md  23-User-Management-API.md  24-Service-Tokens.md  24-User-Invitations.md  25-Multi-Source-Auth.md  25-Roles-and-Permissions.md  26-ABAC.md  30-OAuth-Overview.md  31-OAuth-Setup.md  32-OAuth-Providers.md  33-OAuth-Account-Linking.md  34-OAuth-Security.md  40-Authorization-Overview.md  41-RBAC-Patterns.md  41-SimpleRBAC.md  42-EnterpriseRBAC.md  42-Entity-Hierarchy.md  43-Permissions-System.md  (+33 more)
examples/: README.md  conditional_permissions.md
examples/enterprise_rbac/: .env.example  Dockerfile  PROGRESS.md  QUICKSTART.md  README.md  REQUIREMENTS.md  TREE_PERMISSIONS_TEST_RESULTS.md  api_integration_check.py  challenge_messaging.py  docker-compose.yml  main.py  models.py  profiles.py  pyproject.toml  requirements.txt  reset_test_env.py  seed_data.py  team_directory.py  test_api_key_simple.py  test_entity_scoped_api_keys.py  test_tree_permissions.py  transactional_mail.py
examples/notifications/: .env.example  README.md  TESTING_SUMMARY.md  main.py  pyproject.toml  test_setup.py
frontend/: CLAUDE.md  custom-combobox-test.md  nuxt.config.ts  package.json  test-permissions-final.md
grafana-dashboards/: README.md
observability/: .env.example  .gitignore  EXTENDING.md  README.md  docker-compose.yml  setup.sh  test.sh
outlabs_auth/: __init__.py  _version.py  alembic.ini  bootstrap.py  cli.py  dependencies.py  dependencies_impl.py  fastapi.py  release_versioning.py  response_builders.py
project-management/: ENTERPRISE_RBAC_PROJECT.md  PROGRESS_TRACKING.md  TESTING_STRATEGY.md
scripts/: README_seeding.md  SUPER_ADMIN_README.md  auth_helper.py  benchmark_auth_paths.py  cleanup_duplicates.py  create_client_organization.py  get_admin_token.py  release_version.py  run_abac_cookbook_smoke.py  run_enterprise_example_smoke.py  run_simple_example_smoke.py  seed.py  seed_andrew_only.py  seed_database.py  seed_essential_users.py  seed_main.py  seed_super_admin.py  seed_test_environment.py  seed_via_api.py  smoke_abac_cookbook.py  smoke_enterprise_api.py  test_data_helper.py  test_hybrid_auth.py  test_redis_integration.py  verify_super_admin.py
stress_test/: README.md  ddos_stress_test.py  locust_ddos.py  monitor_container.py  requirements.txt  run_stress_tests.sh
test/: README.md  TEST_PROGRESS.md  TEST_STRATEGY.md  auth_utils.py  base_test.py  debug_perms_detailed.py  debug_platform_admin.py  run_all_tests.py  test_authentication.py  test_complex_scenarios.py  test_data_factory.py  test_entity_access.py  test_entity_hierarchy.py  test_entity_visibility_debug.py  test_memberships.py  test_permission_enforcement.py  test_regional_manager.py  test_roles_permissions.py  (+3 more)
(+858 files in other folders)
