[project]
name = "outlabsAuth"
version = "0.1.0"
description = "A standalone, generic Role-Based Access Control (RBAC) microservice."
authors = []
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic>=2.0.0",
    "uvicorn[standard]",
    "beanie==1.30.0",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "python-multipart",
    "redis",
    "email-validator",
    "pydantic-settings",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "black",
    "isort",
    "flake8",
    "mypy",
]
stress = [
    "locust==2.17.0",
    "httpx==0.25.2",
    "aiohttp==3.9.1",
    "requests==2.31.0",
    "asyncio-throttle==1.0.2",
    "uvloop==0.19.0",
    "motor==3.3.2",
    "pymongo==4.6.0",
    "psutil==5.9.6",
    "memory-profiler==0.61.0",
    "py-spy==0.3.14",
    "faker==20.1.0",
    "factory-boy==3.3.0",
    "gevent==23.9.1",
    "eventlet==0.33.3",
    "matplotlib==3.8.2",
    "pandas==2.1.4",
    "numpy==1.26.2",
    "prometheus-client==0.19.0",
    "pyjwt==2.8.0",
    "cryptography>=41.0.0",
    "rich==13.7.0",
    "click==8.1.7",
    "docker==7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "black",
    "isort",
    "flake8",
    "mypy",
]
