[project]
name = "outlabs-auth"
version = "1.0.0"
description = "FastAPI authentication and authorization library with hierarchical RBAC, tree permissions, and multi-tenant support"
authors = [
    {name = "Outlabs", email = "contact@outlabs.io"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["fastapi", "authentication", "authorization", "rbac", "jwt", "permissions", "hierarchical", "multi-tenant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = [
    # Core FastAPI dependencies
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Database (PostgreSQL via SQLModel/SQLAlchemy)
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # CLI
    "click>=8.1.0",
    # Authentication & Security
    "bcrypt>=4.0.0,<5.0.0",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pyjwt[crypto]>=2.8.0", # [crypto] for Apple Sign In (ES256)
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    # Dynamic dependency injection (DD-039)
    "makefun>=1.15.0",
    # Date/time utilities (for policy engine ABAC conditions)
    "python-dateutil>=2.8.0",
    # OAuth/Social Login (v1.2)
    "httpx>=0.25.0", # For OAuth provider API requests
    # Observability (v1.5)
    "structlog>=23.0.0", # Structured logging
    "prometheus-client>=0.19.0", # Prometheus metrics
    "redis>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/outlabs/outlabsAuth"
Documentation = "https://github.com/outlabs/outlabsAuth/tree/main/docs/library-redesign"
Repository = "https://github.com/outlabs/outlabsAuth"
Issues = "https://github.com/outlabs/outlabsAuth/issues"

[project.optional-dependencies]
# Redis caching support (optional performance enhancement)
redis = [
    "redis>=5.0.0",
]

# OAuth/Social login support (optional, v1.2)
oauth = [
    "httpx-oauth>=0.13.0",          # OAuth2 client library (Google, Facebook, Apple, GitHub, etc.)
]

# Notification system support (optional)
notifications = [
    "aio-pika>=9.0.0",              # RabbitMQ support
    "aiosmtplib>=3.0.0",            # SMTP/Email support
    "sendgrid>=6.10.0",             # SendGrid email support
    "httpx>=0.25.0",                # Webhook support (already in test deps)
    "twilio>=8.0.0",                # SMS + WhatsApp support via Twilio
    "python-telegram-bot>=20.0",   # Telegram support
]

# Development tools
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "uvicorn[standard]>=0.24.0",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "faker>=20.0.0",
    "factory-boy>=3.3.0",
]

# Performance testing and benchmarking
stress = [
    "locust>=2.17.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "asyncio-throttle>=1.0.2",
    "uvloop>=0.19.0",
    "psutil>=5.9.0",
    "memory-profiler>=0.61.0",
    "py-spy>=0.3.14",
    "faker>=20.0.0",
    "factory-boy>=3.3.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "prometheus-client>=0.19.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "docker>=7.0.0",
]

# All optional dependencies
all = [
    "redis>=5.0.0",
    "httpx-oauth>=0.13.0",
    "aio-pika>=9.0.0",
    "aiosmtplib>=3.0.0",
    "sendgrid>=6.10.0",
    "httpx>=0.25.0",
    "twilio>=8.0.0",
    "python-telegram-bot>=20.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "uvicorn[standard]>=0.24.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "faker>=20.0.0",
    "factory-boy>=3.3.0",
    "structlog>=23.0.0",
    "prometheus-client>=0.19.0",
]

[project.scripts]
outlabs-auth = "outlabs_auth.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["outlabs_auth"]

[tool.hatch.metadata]
allow-direct-references = true

# Black code formatting
[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'

# isort import sorting
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# MyPy type checking
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
