[project]
name = "outlabs-auth-enterprise-rbac-example"
version = "1.0.0"
description = "Standalone EnterpriseRBAC example app consuming outlabs-auth as a normal dependency"
requires-python = ">=3.12"
dependencies = [
    "outlabs-auth>=0.1.0a10",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=6.2.0",
    "httpx>=0.25.0",
]

[tool.uv]
package = false
